--- a/twopac/polls/templates/polls/index.html
+++ b/twopac/polls/templates/polls/index.html
@@ -1,7 +1,9 @@
+<h1>Questions</h1>
+
 {% if latest_top %}
     <ul>
     {% for question in latest_top %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
